# SRW_ui

./: DESIGN_NOTES.MD  README.md  pyproject.toml  requirements.txt  setup.py
srw_tools/: __init__.py  cli.py  folder_utils.py  git_helper.py  gui.py  gui_helpers.py  parameter_widgets.py  rpc_server.py  runner_registry.py  runner_selector.py  server_manager.py  simulation_scripts.py  ssh_helper.py  visualizer.py
srw_tools/examples/: __init__.py  sample_visualizer.py
srw_tools/native/: CMakeLists.txt
srw_tools/native/include/: fastlib.h  file_parser.h
srw_tools/native/src/: fastlib.cpp  file_parser.cpp  py_nativelib.cpp
srw_tools/runners/: __init__.py  base.py  local_runner.py  ssh_runner.py
srw_tools/visualizers/: __init__.py  cm_viewer.py  compute_visualizer.py  example_visualizer.py  runner_config_visualizer.py  simulation_data_manager.py  sine_visualizer.py
test_experiment/: run.py
tests/: test_cli.py  test_git_helper.py  test_git_helper_extended.py  test_gui_dividers.py  test_gui_factory.py  test_gui_groups_collapsible.py  test_gui_helpers.py  test_gui_inline_params.py  test_gui_output_classify.py  test_gui_params_and_rpc.py  test_gui_show_invocation.py  test_gui_ssh_mock.py  test_native_lib.py  test_rpc_server.py  test_simulation_discovery.py  test_simulation_watch.py  test_visualizer.py  test_visualizer_display_name.py  test_visualizer_group.py  test_visualizer_parameters.py  test_visualizers_autoimport.py
